--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Build project
         run: npm run build:example
+        env:
+          VITE_BASE_PATH: ${{ github.event.repository.name }}
 
       - name: Upload production-ready build files
         uses: actions/upload-pages-artifact@v3
@@ -51,4 +53,5 @@ jobs:
         uses: actions/deploy-pages@v4
         id: deployment
         with:
+          artifact_name: github-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
