--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
   },
   "scripts": {
     "build": "vue-tsc --declaration",
-    "build:example": "vite build",
-    "dev": "vite --open --debug"
+    "build:example": "vite build --config ./example/vite.config.mts --emptyOutDir",
+    "dev": "vite --open --debug --config ./example/vite.config.mts"
   },
-  "main": "./dist/index.js",
+  "type": "module",
+  "main": "./dist/zoompinch.umd.js",
+  "module": "./dist/zoompinch.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/zoompinch.js",
+      "require": "./dist/zoompinch.umd.js"
+    },
+    "./style.css": "./dist/zoompinch.css"
+  },
   "keywords": [
     "modal",
     "popup",
@@ -35,10 +44,11 @@
   "devDependencies": {
     "@types/node": "^22.7.3",
     "@types/vue": "^2.0.0",
-    "vue-tsc": "2.0.29",
-    "typescript": "5.6.2",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "vite-plugin-dts": "^4.5.4",
     "stylus": "^0.64.0",
+    "typescript": "5.6.2",
     "vite": "^6.3.5",
-    "@vitejs/plugin-vue": "^5.2.4"
+    "vue-tsc": "2.0.29"
   }
 }
