--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "email": "Sererga115@gmail.com"
   },
   "scripts": {
-    "build": "vue-tsc --declaration",
+    "build": "vite build",
     "build:example": "vite build --config ./example/vite.config.mts --emptyOutDir",
     "dev": "vite --open --debug --config ./example/vite.config.mts"
   },
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "./dist/zoompinch.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/zoompinch.js",
     "./style.css": "./dist/zoompinch.css"
   },
   "keywords": [
@@ -47,7 +47,6 @@
     "vite-plugin-dts": "^4.5.4",
     "stylus": "^0.64.0",
     "typescript": "5.6.2",
-    "vite": "^6.3.5",
-    "vue-tsc": "2.0.29"
+    "vite": "^6.3.5"
   }
 }
