--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sergtyapkin/vue3-zoompinch",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "license": "MIT",
   "author": {
@@ -44,9 +44,9 @@
     "@types/node": "^22.7.3",
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.4",
-    "vite-plugin-dts": "^4.5.4",
     "stylus": "^0.64.0",
     "typescript": "5.6.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
